# watcher_backup

./: Cargo.toml
src/: main.rs
src/mappers/: dir_entry_to_commands.rs  mod.rs  template_to_dir_entry.rs
src/models/: command.rs  config.rs  dir_entry.rs  entry_dir_file_priority.rs  entry_dir_priority.rs  entry_file_filter.rs  entry_file_priority.rs  mod.rs  scheduler.rs
src/services/: file_service.rs
