[package]
name = "watcher_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
regex = "1.10.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.1"
cron-parser = "*"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
